--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,15 @@
-Hi there 
+<div class="center jumbotron">
+  <h1>Welcome to the Skydiving App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://www.dropzone.com/">Skydive Genius</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("wings.png", alt: "Wingsuiting"),
+            'http://i.dailymail.co.uk/i/pix/2014/06/16/article-2659322-1ECF065500000578-476_964x635.jpg' %>
+
